--- a/workflows/learn-github-actions.yml
+++ b/workflows/learn-github-actions.yml
@@ -1,13 +1,15 @@
-name: learn-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+name: Create Repository
+
+on:
+  workflow_dispatch:
+
 jobs:
-  check-bats-version:
+  create_repository:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+    - name: Create Repository
+      uses: actions/create-repo@v1
+      with:
+        name: introduction-to-github
+        description: A repository for learning the basics of GitHub
+        private: 'false'
