--- a/.github/workflows/‎create_repository.yml
+++ b/.github/workflows/‎create_repository.yml
@@ -1,6 +1,7 @@
 name: Create Repository
 
-on: [push]
+on:
+  workflow_dispatch:
 
 jobs:
   create_repository:
@@ -12,3 +13,4 @@ jobs:
         name: introduction-to-github
         description: A repository for learning the basics of GitHub
         private: 'false'
+        github-token: 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
