--- a/.github/workflows/‎create_repository.yml
+++ b/.github/workflows/‎create_repository.yml
@@ -1,23 +1,14 @@
 name: Create Repository
 
-on:
-  workflow_dispatch:
+on: [push]
 
 jobs:
-  create_repository:
+  create_repo:
     runs-on: ubuntu-latest
     steps:
-    - name: Create Repository
-      uses: actions/github-script@v4
-      env:
-        REPO_NAME: introduction-to-github
-        REPO_DESCRIPTION: A repository for learning the basics of GitHub
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const { data } = await github.repos.createForAuthenticatedUser({
-            name: process.env.REPO_NAME,
-            description: process.env.REPO_DESCRIPTION,
-            private: false
-          });
-          console.log(`Repository created: ${data.html_url}`);
+    - name: Create a New Repository
+      run: |
+        curl -X POST \
+        -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+        -d '{"name":"introduction-to-github"}' \
+        https://api.github.com/user/repos
