--- a/.github/workflows/‎create_repository.yml
+++ b/.github/workflows/‎create_repository.yml
@@ -8,7 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Create Repository
-      uses: f1lander/create-repository-action@v1.0.2
+      uses: f1lander/create-repository-action@1.0.0    
       with:
-        name: 'introduction-to-github'
+        name: 'repository-name'
+        org: 'org-name'
+        private: false
         access-token: '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'
