--- a/.github/workflows/‎create_repository.yml
+++ b/.github/workflows/‎create_repository.yml
@@ -3,6 +3,8 @@ name: Create Repo
 on:
   push:
     branches: [ master ]
+  
+  workflow_dispatch:
 
 jobs:
   create_repo:
@@ -10,6 +12,9 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Create Repository
       uses: f1lander/create-repository-action@v1.0.2
       with:
