--- a/.github/workflows/‎create_repository.yml
+++ b/.github/workflows/‎create_repository.yml
@@ -13,8 +13,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       with:
+        ref: master
         token: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+  
     - name: Create Repository
       uses: f1lander/create-repository-action@v1.0.2
       with:
