--- a/.github/workflows/‎create_repository.yml
+++ b/.github/workflows/‎create_repository.yml
@@ -29,7 +29,7 @@ jobs:
         access-token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set Repo URL
-      run: echo "repo_url='https://github.com/AngeliaZddl/CSE110SP23Lab5-introduction-to-github'" >> $GITHUB_OUTPUT
+      run: echo "repo_url='$https://github.com/AngeliaZddl/CSE110SP23Lab5-introduction-to-github'" >> $GITHUB_OUTPUT
     
     - name: Print Repo URL
       run: echo $repo_url
