--- a/.github/workflows/‎create_repository.yml
+++ b/.github/workflows/‎create_repository.yml
@@ -24,7 +24,7 @@ jobs:
         repoName: 'CSE110SP23Lab5-introduction-to-github'
         repoDescription: 'introduction-to-github'
         repoVisibility: 'public'
-        securityToken: ${{ secrets.GITHUB_TOKEN }}
+        securityToken: ${{ secrets.ACCESS_TOKEN }}
       
     - name: Print Repository URL
       run: |
