--- a/.github/workflows/‎create_repository.yml
+++ b/.github/workflows/‎create_repository.yml
@@ -16,7 +16,16 @@ jobs:
       with:
         ref: master
 
+    - name: Check if repository exists
+      id: check_repo
+      uses: peter-evans/repository-dispatch@v1
+      with:
+        token: ${{ secrets.ACCESS_TOKEN }}
+        repository: 'CSE110SP23Lab5-introduction-to-github'
+        event-type: create-repo
+
     - name: Create GitHub Repo
+      if: steps.check_repo.outputs == 'failure'
       id: create_repo
       uses: howlowck/create-repo-action@v1.0
       with:
