--- a/.github/workflows/‎create_repository.yml
+++ b/.github/workflows/‎create_repository.yml
@@ -16,9 +16,9 @@ jobs:
       with:
         ref: master
 
-    - name: Check if repository exists
+    - name: Repository Dispatch
       id: check_repo
-      uses: peter-evans/repository-dispatch@v1
+      uses: peter-evans/repository-dispatch@v2.1.1
       with:
         token: ${{ secrets.ACCESS_TOKEN }}
         repository: 'CSE110SP23Lab5-introduction-to-github'
